--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -74,7 +74,7 @@
     {# Footer bottom. #}
     <div class="site-footer__bottom">
       <div class="row">
-        <div class="hidden-xs col-sm-12 col-md-5 pull-right site-tours-wrapper">
+        <div class="col-sm-12 col-md-5 site-tours-wrapper">
           {# Hide/show feature beacons #}
           <button type="button" class="btn btn-primary feature-beacon-toggle">
             <i class="fa fa-star-o fa-lg"></i> <span>{{ 'Hide Beacons'|t }}</span>
