--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -65,7 +65,11 @@
     </a>
     {# Button trigger help modal #}
     <button type="button" class="btn btn-primary fixed-button help-modal" data-toggle="modal" data-target="#help" aria-label="Help">
-      <i class="fa fa-question-circle fa-2x"></i>
+      <i class="fa fa-question-circle fa-lg"></i>
+    </button>
+    {# Hide/show feature beacons #}
+    <button type="button" class="btn btn-primary fixed-button feature-beacon-toggle">
+      <i class="fa fa-star-o fa-lg"></i>
     </button>
     {{ page_top }}
     {{ page }}
