--- a/web/themes/custom/commerce_2_demo/sass/custom/blocks/_uh-feature-beacon.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/blocks/_uh-feature-beacon.scss
@@ -11,7 +11,7 @@ $beacon-size: 26px;
 $beacon-offset: 18px;
 $beacon-offset-xs: 5px;
 
-// Toggle button.
+// Toggle buttons.
 .feature-beacon-toggle {
   display: none; // Shown with jQuery.
   background-color: $beacon-color;
@@ -26,6 +26,34 @@ $beacon-offset-xs: 5px;
   i {
     margin-right: 3px;
   }
+}
+
+.feature-beacon-toggle.fixed-button {
+  position: fixed;
+  top: calc(50% + 50px);
+  right: 0;
+  z-index: 5;
+  width: 45px;
+  padding: 10px 0;
+  border-radius: 5px 0 0 5px;
+  border-right: 5px solid $beacon-color-dark;
+  text-align: center;
+
+  i {
+    margin-right: 0;
+  }
+
+  @media (max-width: 1065px) {
+    display: none !important;
+    visibility: hidden;
+  }
+}
+
+.maintenance-page .help-modal.fixed-button,
+.path-pos-customer-display .help-modal.fixed-button,
+.path-commerce-pos .help-modal.fixed-button {
+  display: none;
+  visibility: hidden;
 }
 
 // Marker animation.
