--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
@@ -66,14 +66,22 @@
       }
     }
     li.flex-nav-prev {
-      left: 40px;
+      left: 55px;
+
+      @media (max-width: 1065px) {
+        left: 25px;
+      }
 
       a {
         background: url(../gfx/arrow-prev.svg) center center no-repeat;
       }
     }
     li.flex-nav-next {
-      right: 40px;
+      right: 55px;
+
+      @media (max-width: 1065px) {
+        right: 25px;
+      }
 
       a {
         background: url(../gfx/arrow-next.svg) center center no-repeat;
