Remove custom jQuery facet soft limit show/hide

--- a/web/themes/custom/commerce_2_demo/sass/custom/blocks/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/blocks/_blocks.scss
@@ -480,7 +480,7 @@ form.newsletter-signup-form {
   }
 }
 
-.show-more-options {
+.facets-soft-limit-link {
   display: block;
   position: relative;
   bottom: 12px;
