Fix contextual div positioning

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -8,6 +8,11 @@
 .site-footer {
   div {
     position: relative;
+
+    // Except for the following.
+    &.contextual {
+      position: absolute;
+    }
   }
 }
 
