Update product bundling template elements

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-pado-add-to-cart-form.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-pado-add-to-cart-form.html.twig
@@ -18,8 +18,8 @@
 
 {% if form.add_ons.items %}
   <div class="add-ons-wrapper">
-    <label class="add-ons__title"><i class="fa fa-star"></i> {{ 'Bundle and Save!'|t }}</label>
-    <div class="add-ons__header">{{ 'Purchase with the following items and save! Discount applied in cart.'|t }}</div>
+    <label class="add-ons__title"><i class="fa fa-star"></i> {{ 'Bundle It!'|t }}</label>
+    <div class="add-ons__header">{{ 'Complete your order by adding any of these related products.'|t }}</div>
     {{ form.add_ons }}
   </div>
 {% endif %}
