--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -33,7 +33,7 @@
   <a href="{{ product_url }}" {{ attributes.addClass(classesTeaser) }} aria-label="{{ product_entity.title.value }}">
     {% if product.field_add_on_products['#items'] %}
       <div class="add-on-item__teaser-flag">
-        {{ 'Bundle <br> and Save!'|t }}
+        {{ 'Bundle<br>Available!'|t }}
       </div>
     {% endif %}
 
