Fix cart block div positioning

--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
@@ -436,7 +436,8 @@
 /**
  * Commerce cart block expanded.
  */
-.cart-block--contents {
+div.cart-block--contents {
+  position: absolute;
   width: 350px;
   margin-top: 5px;
   border: 1px solid $gray;
