--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -64,11 +64,11 @@
       {{ 'Skip to main content'|t }}
     </a>
     {# Button trigger help modal #}
-    <button type="button" class="btn btn-primary fixed-button help-modal" data-toggle="modal" data-target="#help" aria-label="Help">
+    <button type="button" class="btn btn-primary fixed-button help-modal" data-toggle="modal" data-target="#help" title="{{ 'Learn more about this demo'|t }}">
       <i class="fa fa-question-circle fa-lg"></i>
     </button>
     {# Hide/show feature beacons #}
-    <button type="button" class="btn btn-primary fixed-button feature-beacon-toggle">
+    <button type="button" class="btn btn-primary fixed-button feature-beacon-toggle" title="{{ 'Toggle feature icons'|t }}">
       <i class="fa fa-star-o fa-lg"></i>
     </button>
     {{ page_top }}
