Update commerce-product template

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -437,6 +437,7 @@
     width: 200px;
     float: right;
     margin-bottom: 20px;
+    z-index: auto !important;
 
     @media (max-width: 420px) {
       display: block !important;
